lib/tests/fixtures/compiler/parser/return_in_defined_type_with_value.pp
define foo() {
    if true {
        return bar
    }
}
